--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2026 Gotlhe Jason Sekhomba</p>
     </footer>
 </body>
 </html>
