--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,11 @@
     </header>
 
     <main>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
+        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:gotlhesekhomba@gmail.com">example@example.com</a>.</p>
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2026 Gotlhe Jason Sekhomba</p>
     </footer>
 </body>
 </html>
