--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,11 @@
         </nav>
     </header>
 
-    <main>
-        <p>If you'd like to get in touch, feel free to email me at <a href="mailto:gotlhesekhomba@gmail.com">example@example.com</a>.</p>
-    </main>
-
+   <main class="container my-5">
+    <h2>Contact Me</h2>
+    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com" class="btn btn-success">example@example.com</a>.</p>
+</main>
+    
     <footer>
         <p>&copy; 2026 Gotlhe Jason Sekhomba</p>
     </footer>
