--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
    <main class="container my-5">
     <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com" class="btn btn-success">example@example.com</a>.</p>
+    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:gotlhesekhomba@gmail.com" class="btn btn-success">gotlhesekhomba@gmail.com</a>.</p>
 </main>
     
     <footer>
